@@ -1,5 +1,11 @@
 2009-09-18  Dan Fandrich <dan@coneharvesters.com>
 
+	* Added support for writing Pentax and Casio v2 MakerNotes
+	* Now displaying all components in Pentax and Casio v2 MakerNotes
+	  when a tag has more than one
+
+2009-09-18  Dan Fandrich <dan@coneharvesters.com>
+
 	* po/de.po: Updated German translation by Marcus Meissner
 	* po/sv.po: Updated Swedish translation by Daniel Nylander
 	* po/vi.po: Updated Vietnamese translation by Clytie Siddall
